fix log message that creates error with mongomock (use db.name instead of db to avoid bug with __repr__)

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@
 test=pytest
 
 [tool:pytest]
-addopts = --ignore=tests/test_globusgalaxy.py --ignore=tests/test_dbify.py
+addopts=--ignore=tests/test_globusgalaxy.py
