update setup config to use correct pytest options; remove genlims module test that checks for live db connection

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,8 @@
 [aliases]
 test=pytest
 
+[pytest]
+addopts=--ignore=tests/test_globusgalaxy.py
+
 [tool:pytest]
 addopts=--ignore=tests/test_globusgalaxy.py
