add coverage report to pytest call

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 test=pytest
 
 [pytest]
-addopts=--ignore=tests/test_globusgalaxy.py
+addopts=--cov bripipetools --ignore=tests/test_globusgalaxy.py
 
 [tool:pytest]
-addopts=--ignore=tests/test_globusgalaxy.py
+addopts=--cov bripipetools --ignore=tests/test_globusgalaxy.py
