--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,18 @@
+[bumpversion]
+current_version = 0.1.0
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
+
+[bumpversion:file:bripipetools/__init__.py]
 
 [aliases]
-test=pytest
+test = pytest
 
 [pytest]
-addopts=--cov bripipetools --ignore=tests/test_globusgalaxy.py
+addopts = --cov bripipetools --ignore=tests/test_globusgalaxy.py
 
 [tool:pytest]
-addopts=--cov bripipetools --ignore=tests/test_globusgalaxy.py
+addopts = --cov bripipetools --ignore=tests/test_globusgalaxy.py
+
