--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 
 # commands set up environment, install dependencies
 install:
-    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION bs4 pymongo pandas
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION beautifulsoup4 pymongo pandas
     - source activate test-environment
     - pip install python-coveralls
     - pip install .
