clean up & annotate tests for genlims module

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,6 @@ tag = True
 [aliases]
 test = pytest
 
-[pytest]
-addopts = --cov bripipetools --ignore=tests/test_globusgalaxy.py
-
 [tool:pytest]
-addopts = --cov bripipetools --ignore=tests/test_globusgalaxy.py
+addopts = --cov bripipetools
 
