finish adding tests for monitoring module

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,5 +11,4 @@ tag = True
 test = pytest
 
 [tool:pytest]
-addopts = --cov bripipetools/monitoring
-norecursedirs = docs *.egg-info .git bripipetools
+addopts = --cov bripipetools
