results of running 2to3 utility

--- a/environment.yml
+++ b/environment.yml
@@ -2,31 +2,32 @@ channels: !!python/tuple
 - !!python/unicode 'bioconda'
 - !!python/unicode 'defaults'
 dependencies:
-- beautifulsoup4=4.5.1=py27_0
-- python-dateutil=2.7.3=py27_0
-- coverage=4.2=py27_0
-- funcsigs=1.0.2=py27_0
-- mkl=11.3.3=0
-- mock=2.0.0=py27_0
-- numpy=1.11.2=py27_0
-- openssl=1.0.2j=0
-- pandas=0.19.0=np111py27_0
-- pbr=1.10.0=py27_0
-- pip=8.1.2=py27_0
-- py=1.4.31=py27_0
-- pymongo=3.3.0=py27_0
-- pytest=3.0.3=py27_0
-- pytest-cov=2.3.1=py27_0
-- python=2.7.12=1
-- pytz=2016.7=py27_0
-- pyyaml=3.12=py27_0
+- beautifulsoup4=4.5.1
+- python-dateutil=2.7.3
+- coverage=4.2
+- funcsigs=1.0.2
+- mkl=11.3.3
+- mock=2.0.0
+- numpy=1.11.2
+- openssl=1.0.2j
+- pandas
+- pbr=1.10.0
+- pip
+- py
+- pymongo=3.3.0
+- pytest
+- pytest-cov=2.6.1
+- python=3.6
+- pytz=2019.3
+- pyyaml=3.12
 - zlib=1.2.8=3
 - readline=6.2=2
-- setuptools=27.2.0=py27_0
-- six=1.10.0=py27_0
+- requests
+- setuptools=27.2.0
+- six=1.10.0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
-- wheel=0.29.0=py27_0
+- wheel=0.29.0
 - yaml=0.1.6=0
 - pip:
   - mongomock==3.6.0
