updated dependencies to allow for fresh install

--- a/environment.yml
+++ b/environment.yml
@@ -2,36 +2,36 @@ channels: !!python/tuple
 - !!python/unicode 'bioconda'
 - !!python/unicode 'defaults'
 dependencies:
-- beautifulsoup4=4.5.1
+- python=3.6
+- beautifulsoup4=4.8.1
 - biopython
-- python-dateutil=2.7.3
-- coverage=4.2
+- coverage=5.0
 - funcsigs=1.0.2
 - lxml
 - matplotlib
-- mkl=11.3.3
+- mkl
 - mock
-- numpy=1.11.2
+- numpy=1.17.4
 - openssl
 - pandas
-- pbr=1.10.0
+- pbr=5.1.1
 - pip
 - py
-- pymongo=3.3.0
+- pymongo=3.9.0
 - pytest
 - pytest-cov=2.6.1
-- python=3.6
+- python-dateutil=2.7.3
 - pytz=2019.3
 - pyyaml=3.12
-- zlib=1.2.8=3
-- readline=6.2=2
+- readline=7.0
 - requests
-- setuptools=27.2.0
+- setuptools=42.0.2
 - six=1.10.0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
+- sqlite=3.30.1
+- tk=8.6.8
 - wheel=0.29.0
-- yaml=0.1.6=0
+- yaml=0.1.7
+- zlib=1.2.11
 - pip:
   - mongomock==3.6.0
   - sentinels==1.0.0
